# libfix64

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  generate.py  requirements.txt
.github/workflows/: test.yml
cmake/: AddJinjaTemplate.cmake  CheckPythonRequirements.cmake
include/: fix64.h
include/fix64/: arith.h  cmp.h  consts.h.jinja  cvt.h.jinja  impl.h  math.h  str.h
scripts/: consts.py  jinja.py  jinja_render.py  poly_error.py  requirements.py  run-clang-format.py
src/: CMakeLists.txt  Makefile  fallback.c  fix64.c  fix64.c.jinja  fix64.h  fix64.h.jinja  fix64_exp.c.jinja  fix64_fallback.c  fix64_inline.h  fix64_str.c.jinja  fix64_trig.c.jinja  str.c  str.inc.jinja
src/math/: exp.c  exp.inc.jinja  trig.c  trig.inc.jinja
test/: __init__.py  test_exp.py  test_trig.py
tests/: CMakeLists.txt  common.h  consts.c  cos.c  exp.c  exp2.c  fallback_clz.c  fallback_int128.c  fallback_sat_arith.c  impl_div128.c  literals.c  log.c  log10.c  log2.c  sanity.c  sin.c  str.c  tan.c
